Simplify documentation and include warning suppression